--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-inject": "^3.0.0",
+    "gulp-jshint": "^1.11.2",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.4.1",
+    "jshint-stylish": "^2.0.1",
     "mongoose": "^4.1.10",
     "path": "^0.12.7",
     "stream-series": "^0.1.1"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
