--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
     "gulp-nodemon": "^2.0.4",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.4.1",
+    "jasmine-core": "^2.3.4",
     "jshint-stylish": "^2.0.1",
+    "karma": "^0.13.10",
+    "karma-jasmine": "^0.3.6",
     "mongoose": "^4.1.10",
     "path": "^0.12.7",
     "stream-series": "^0.1.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "angular-mocks": "^1.4.7",
+    "karma-chrome-launcher": "^0.2.0"
+  }
 }
