--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.4.7",
-    "karma-chrome-launcher": "^0.2.0"
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "phantomjs": "^1.9.18"
   }
 }
