--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "angular": "^1.4.7",
     "body-parser": "^1.14.1",
+    "bootstrap": "^3.3.5",
     "del": "^2.0.2",
     "express": "^4.13.3",
     "fs": "0.0.2",
     "gulp": "^3.9.0",
+    "gulp-angular-templatecache": "^1.7.0",
     "gulp-concat": "^2.6.0",
     "gulp-inject": "^3.0.0",
     "gulp-jshint": "^1.11.2",
@@ -28,7 +30,8 @@
     "karma-jasmine": "^0.3.6",
     "mongoose": "^4.1.10",
     "path": "^0.12.7",
-    "stream-series": "^0.1.1"
+    "stream-series": "^0.1.1",
+    "ui-router": "0.0.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.7",
