--- a/package.json
+++ b/package.json
@@ -24,13 +24,8 @@
     "gulp-nodemon": "^2.0.4",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.4.1",
-    "jasmine-core": "^2.3.4",
-    "jshint-stylish": "^2.0.1",
-    "karma": "^0.13.10",
-    "karma-jasmine": "^0.3.6",
     "mongoose": "^4.1.10",
     "path": "^0.12.7",
-    "stream-series": "^0.1.1",
     "ui-router": "0.0.1"
   },
   "devDependencies": {
@@ -38,6 +33,10 @@
     "karma-chrome-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.18"
+    "karma": "^0.13.10",
+    "karma-jasmine": "^0.3.6",
+    "phantomjs": "^1.9.18",
+    "jasmine-core": "^2.3.4",
+    "jshint-stylish": "^2.0.1"
   }
 }
