--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "mean-bp",
+  "name": "mean-boilerplate",
   "version": "0.0.1",
   "description": "A strater app for MEAN applications.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp run:unit",
+    "start": "gulp dev"
   },
   "author": "Jonathan Swieboda",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "angular": "^1.4.7",
     "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
+    "cookie-parser": "^1.4.0",
+    "cookie-session": "^1.2.0",
     "del": "^2.0.2",
     "express": "^4.13.3",
+    "express-session": "^1.11.3",
     "fs": "0.0.2",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
@@ -24,19 +28,25 @@
     "gulp-nodemon": "^2.0.4",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.4.1",
+    "jquery": "^2.1.4",
     "mongoose": "^4.1.10",
+    "morgan": "^1.6.1",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^3.1.0",
     "path": "^0.12.7",
+    "serve-favicon": "^2.3.0",
     "ui-router": "0.0.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.7",
+    "gulp-livereload": "^3.8.1",
+    "jasmine-core": "^2.3.4",
+    "jshint-stylish": "^2.0.1",
+    "karma": "^0.13.10",
     "karma-chrome-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
-    "karma": "^0.13.10",
-    "karma-jasmine": "^0.3.6",
-    "phantomjs": "^1.9.18",
-    "jasmine-core": "^2.3.4",
-    "jshint-stylish": "^2.0.1"
+    "phantomjs": "^1.9.18"
   }
 }
